--- a/css/mobile.css
+++ b/css/mobile.css
@@ -86,7 +86,7 @@ body>header {
 }
 
 .burger__sub-menu, .sub-menu__menu {
-    position: relative;
+    position: fixed;
     top: 0;
     right: -300rem;
     z-index: 2;
@@ -96,9 +96,11 @@ body>header {
 }
 
 .burger__sub-menu.open, .sub-menu__menu.open{
-    right: -5.5rem;
-    height: 100%;
     transition: right 0.5s;
+    right: 1.5rem;
+    width: calc(100%/3*2);
+    height: 100%;
+    margin-top: 3.8rem;
 }
 
 .sub-menu__menu {
@@ -106,6 +108,11 @@ body>header {
     top: 0;
     padding:0;
     font-size:1.2rem;
+    
+}
+
+.sub-menu__menu.open {
+    width: calc(100%/5*4);
 }
 
 .sub-menu__benefit, .sub-menu__client, .sub-menu__location {
