--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,8 +46,7 @@ a {
     width:1rem; 
     height:1rem;
     position: relative;
-    transition:transform 0.5s;
-   
+    transition:transform 0.15s;
 }
 
 .burger__line {
@@ -58,7 +57,7 @@ a {
     height: 1px;
     background-color: gray;
     transform: translateX(-50%) translateY(-50%);
-    transition: background-color 0.5s, transform 0.5s
+    transition: background-color 0.15s , transform 0.15s;
 }
 
 .burger__line::after, .burger__line::before{
@@ -68,32 +67,51 @@ a {
     content:'';
     width: 100%;
     height: 1px;
-    transform: translateY(-6px);
     background-color: gray;
     transform-origin:50% 50%;
+    transform:rotate(0deg);
+}
+
+.burger__line::before {
+  transform: translateY(-6px);
+  animation: menu-line 0.15s;
 }
 
 .burger__line::after {
-    transform: translateY(6px);
+   transform: translateY(6px);
+   animation: menu-line 0.15s;
 }
 
 .menu__burger.open {
     transform: rotate(180deg);
-    transition:transform 0.5s;
+    transition:transform 0.15s;
 }
 
 .menu__burger.open>.burger__line {
     background-color:transparent;
-    transition:transform 0.5s background-color 0.5s;
+    transition:transform 0.15s, background-color 0.15s;
 }
 
 .menu__burger.open>.burger__line::before {
-    transform: translateY(0) rotate(45deg);
-    transition:transform 0.5s;
+    transform: rotate(45deg);
+    animation:  menu-line-return 0.15s;
 }
 .menu__burger.open>.burger__line::after {
-    transform: translateY(0) rotate(-45deg);
-    transition:transform 0.5s;
+    transform: rotate(-45deg);
+    animation: menu-line-return 0.15s;
+}
+
+@keyframes menu-line {
+    40%,60% {
+        transform: translateY(0);
+        transform:rotate(0deg);
+    }
+}
+@keyframes menu-line-return {
+    40%,60% {
+        transform:rotate(0deg);
+        transform: translateY(0);
+    }
 }
 
 .burger__sub-menu, .sub-menu__menu {
@@ -103,11 +121,11 @@ a {
     z-index: 2;
     padding: 1.5rem;
     background-color: white;
-    transition: right 0.5s;
+    transition: right 0.15s;
 }
 
 .burger__sub-menu.open, .sub-menu__menu.open{
-    transition: right 0.5s;
+    transition: right 0.15s;
     right: 1.5rem;
     width: calc(100%/3*2);
     height: 100%;
@@ -205,13 +223,13 @@ main {
     width: 100%;
     z-index:1;
     opacity: 0;
-    transition: opacity 0.3s; 
+    transition: opacity 0.15s; 
 }
 
 .opacity.open {
     background-color:black;
     opacity:0.3;
-    transition: opacity 0.3s; 
+    transition: opacity 0.15s; 
 }
 
 .article {
@@ -362,12 +380,12 @@ footer {
 .menu-title__icone {
     transform: rotate(90deg);
     font-weight: bold;
-    transition: transform 0.5s; 
+    transition: transform 0.15s; 
 }
 
 .menu-title__icone.open {
     transform: rotate(-90deg);
-    transition: transform 0.5s;
+    transition: transform 0.15s;
 }
 
 .menu__subtitle{
@@ -390,14 +408,14 @@ footer {
     color:rgb(105, 105, 105);
     z-index:2;
     height:auto;
-    transition: height 0.3s, padding 0.3s;
+    transition: height 0.15s, padding 0.15s;
 }
 
 .menu-link.hidden {
     padding: 0;
     z-index:-1;
     height:0;
-    transition: height 0.3s, padding 0.3s;
+    transition: height 0.15s, padding 0.15s;
 }
 
 .footer__menu--second {
